# HOS-MAKE

./: LICENSE  README.md  pyproject.toml  test_hos.py
hos/: __init__.py
hos/ai/: __init__.py  dataset.py  model.py  planner.py  strategy.py
hos/ai/providers/: __init__.py  anthropic.py  base.py  google.py  local.py  openai.py
hos/analyzer/: __init__.py  ast_analyzer.py  cfg_generator.py  dfa_analyzer.py  hotpath_detector.py  main.py  sensitivity_analyzer.py
hos/cli/: __init__.py  main.py
hos/language/: __init__.py  arm_processor.py  base.py  cpp_processor.py  detector.py  go_processor.py  processor_factory.py  python_processor.py  rust_processor.py  wasm_processor.py
hos/runtime/: __init__.py
hos/transformer/: __init__.py  control_flow.py  data.py  instruction.py  main.py  runtime.py  structure.py  virtualization.py
tests/: test_ai_providers.py  test_cli.py  test_data_transformer.py  test_integration.py
