[tool.poetry]
name = "hos-make"
version = "0.5.0"
description = "多语言代码加密系统，支持Python、C/C++、Rust、Go、ARM和WebAssembly"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "hos" }]

[tool.poetry.dependencies]
python = "^3.8"
tree-sitter = "^0.20.0"
tree-sitter-python = "^0.20.0"
pytest = "^7.0.0"
click = "^8.0.0"
tqdm = "^4.60.0"
pyyaml = "^6.0"
cryptography = "^40.0.0"
openai = { version = "^1.0.0", optional = true }
anthropic = { version = "^0.20.0", optional = true }
google-generativeai = { version = "^0.3.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.0.0"
isort = "^5.0.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hos-make = "hos.cli.main:cli"
